Version 1.9.4:

- Opal Dashboard:

   - Fixed a bug in the creation of the time series for the charts

   - Improved checking for the "Add a File" button in the simple submission form.
     Now it checks that the user has actually uploaded a file.

   - The chart now uses integer numbers for the X axis.

   - Fixed a bug in the JobStatus page that was not displaying properly the 
     name of the service

- Opal Services:
  
  - The user can now set the location of the working directory in the
    opal.properties if the symlinks are resolved to different locations on
    the head and compute nodes of a cluster

Version 1.9.3:

- Opal Dashboard:

   - Fixed a bug in the submission form where input file parameters were not 
     properly handled on the command line

   - Fixed a bug in the automatic interface generation where an exception
     was thrown if the number of flags were zero

   - Fixed a bug where the usage information wasn't displayed correctly for 
     the automatically generated interface

   - Fixed a locale issue in the formatting of dates used by the statistics
     tab of the dashboard

- Opal Services:
   
   - Fixed a bug where the job status was being retrieved incorrectly
     during a destroy() operation when a database was being used to persist
     state

   - Updated command-line argument validation client to now account for groups

   - Improved clean task of the build.xml file, now it deletes also the generated 
     JavaDoc

Version 1.9.2:

- Opal Dashboard:

  - The simple submission form now supports upload of multiple input files

  - The output page after job submission is now opened in a new window

  - The help section of the submission form now displays HTML tags correctly

  - The list of jobs currently running is plotted as a bar graph, with
    different colors for every service

  - Better error reporting if database connection can not be established
    for statistical purposes
